--- a/app.json
+++ b/app.json
@@ -6,9 +6,9 @@
     "url",
     "uploader"
   ],
-  "success_url": "https://telegram.dog/Urluploadercpbot",
-  "website": "https://github.com/neera-j",
-  "repository": "https://github.com/neera-j/urluploader",
+  "success_url": "https://github.com/NaveenTn49/Url-uploadert",
+  "website": "https://t.me/naveenurlbot",
+  "repository": "https://github.com/NaveenTn49/Url-uploader",
   "env": {
     "WEBHOOK": {
       "description": "Leave this as it is!",
@@ -42,7 +42,7 @@
       "required": false
     },
     "DEF_THUMB_NAIL_VID_S": {
-      "description": "default thumbnail link to be used in the videos if youtube-dl is unable to find a thumbnail. Get a link for your image from @TGraphHEXbot",
+      "description": "default thumbnail link to be used in the videos if youtube-dl is unable to find a thumbnail. Get a link for your image from @naveenurlbot",
       "value": "",
       "required": false
     },
